Fix reducing and enlarging tile animations
Enlarging a tile was displaying the small image
for too long, the sprite was visible during the
animation. Same thing for the reducing animation
which let enough time to notice the large image
stretch. Resolve and dissolve effect of the tile
content are now quicker.

--- a/src/components/tiles/tiles.scss
+++ b/src/components/tiles/tiles.scss
@@ -107,7 +107,7 @@ $OPL_TILES_ACCENT_COLOR: #e2287b;
     @include animation-timing-function(cubic-bezier(0.4, 0, 0.2, 1));
     opacity: 1;
   }
-  70% {
+  100% {
     opacity: 0;
   }
 }
@@ -133,7 +133,7 @@ $OPL_TILES_ACCENT_COLOR: #e2287b;
     @include animation-timing-function(cubic-bezier(0.4, 0, 0.2, 1));
     opacity: 1;
   }
-  30% {
+  10% {
     opacity: 0;
   }
   90% {
@@ -248,7 +248,7 @@ opl-tiles {
 
       .opl-content {
         @include animation-name(opl-tile-dissolve);
-        @include animation-duration(700ms);
+        @include animation-duration(50ms);
         @include animation-delay(100ms);
         @include animation-fill-mode(forwards);
       }
